2015-04-13  Mike Frysinger  <vapier@gentoo.org>

	* interp.c (mips_option_handler, open_trace, sim_close,
	sim_write, sim_read, sim_store_register, sim_fetch_register,
	sim_create_inferior, pr_addr, pr_uword64): Convert old style
	prototypes.
	(sim_open): Convert old style prototype.  Change casts with
	sim_write to unsigned char *.
	(fetch_str): Change null to unsigned char, and change cast to
	unsigned char *.
	(sim_monitor): Change c & ch to unsigned char.  Change cast to
	unsigned char *.

2015-04-12  Mike Frysinger  <vapier@gentoo.org>

	* Makefile.in (SIM_OBJS): Move interp.o to the start of the list.

2015-04-06  Mike Frysinger  <vapier@gentoo.org>

	* Makefile.in (SIM_OBJS): Delete sim-engine.o.

2015-04-01  Mike Frysinger  <vapier@gentoo.org>

	* tconfig.h (SIM_HAVE_PROFILE): Delete.

2015-03-31  Mike Frysinger  <vapier@gentoo.org>

	* config.in, configure: Regenerate.

2015-03-24  Mike Frysinger  <vapier@gentoo.org>

	* interp.c (sim_pc_get): New function.

2015-03-24  Mike Frysinger  <vapier@gentoo.org>

	* sim-main.h (SIM_HAVE_BIENDIAN): Delete.
	* tconfig.h (SIM_HAVE_BIENDIAN): Delete.

2015-03-24  Mike Frysinger  <vapier@gentoo.org>

	* configure: Regenerate.

2015-03-23  Mike Frysinger  <vapier@gentoo.org>

	* configure: Regenerate.

2015-03-23  Mike Frysinger  <vapier@gentoo.org>

	* configure: Regenerate.
	* configure.ac (mips_extra_objs): Delete.
	* Makefile.in (MIPS_EXTRA_OBJS): Delete.
	(SIM_OBJS): Delete MIPS_EXTRA_OBJS.

2015-03-23  Mike Frysinger  <vapier@gentoo.org>

	* configure: Regenerate.
	* configure.ac: Delete sim_hw checks for dv-sockser.

2015-03-16  Mike Frysinger  <vapier@gentoo.org>

	* config.in, configure: Regenerate.
	* tconfig.in: Rename file ...
	* tconfig.h: ... here.

2015-03-15  Mike Frysinger  <vapier@gentoo.org>

	* tconfig.in: Delete includes.
	[HAVE_DV_SOCKSER]: Delete.

2015-03-14  Mike Frysinger  <vapier@gentoo.org>

	* Makefile.in (SIM_RUN_OBJS): Delete.

2015-03-14  Mike Frysinger  <vapier@gentoo.org>
